# Project-Aegis

./: .gitignore  Cargo.toml  INDUSTRY_COMPARISON.md  LICENSE  Makefile  README.md  project_aegis_features.md  project_aegis_plan_and_roadmap.txt  project_aegis_tasks.md  start.sh  test_yara.rs
.github/workflows/: ci.yml
aegis-analysis/: Cargo.toml
aegis-analysis/src/: entropy.rs  hid_spoof.rs  honey_token.rs  lib.rs  ml_anomaly.rs  threat_intel.rs  yara_engine.rs
aegis-common/: Cargo.toml
aegis-common/src/: config.rs  device.rs  error.rs  ipc.rs  lib.rs  logging.rs
aegis-daemon/: Cargo.toml
aegis-daemon/src/: main.rs  state.rs
aegis-daemon/src/interception/: mod.rs  power_monitor.rs  udev_monitor.rs  write_blocker.rs
aegis-daemon/src/ipc/: handler.rs  server.rs
aegis-daemon/src/policy/: device_passport.rs  geofence.rs  mod.rs  rbac.rs
aegis-ui/: package-lock.json  package.json
aegis-ui/src/: App.tsx  styles.css
aegis-ui/src-tauri/: Cargo.toml  tauri.conf.json
aegis-ui/src-tauri/src/: lib.rs  main.rs
aegis-ui/src/components/: Sidebar.tsx
aegis-ui/src/pages/: AuditLog.tsx  Dashboard.tsx  DeviceMap.tsx  Sanitize.tsx  Settings.tsx
config/: aegis.toml
install/: 99-aegis.rules  aegis-daemon.service  install.sh
rules/: 99-aegis-usb.rules
rules/yara/: aegis_base.yar  ransomware_indicators.yar  suspicious_executables.yar
scripts/: aegis-udev-notify.sh  calibrate-geofence.sh
