[workspace]
resolver = "2"
members = [
    "aegis-common",
    "aegis-daemon",
    "aegis-analysis",
    "aegis-ui/src-tauri"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Project Aegis Team"]
license = "MIT"
description = "Zero-Trust USB Security Suite"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
toml = "0.8"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
