[package]
name = "aegis-common"
version.workspace = true
edition.workspace = true
description = "Shared types, IPC protocol, and utilities for Project Aegis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
